[package]
authors = ["Frequency"]
description = "A package that defines common primitives used in runtime and RPCs"
edition = "2021"
homepage = "https://frequency.xyz"
license = "Apache-2.0"
name = "common-primitives"
publish = false
repository = "https://github.com/LibertyDSNP/frequency/"
version = "1.9.0+polkadot1.1.0"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
parity-scale-codec = { workspace = true, features = [
  "derive",
] }
frame-support = { workspace = true }
frame-system = { workspace = true }
impl-serde = { workspace = true }
scale-info = { workspace = true, features = [
  "derive",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = [
  "alloc",
] }
enumflags2 = { workspace = true }
smallvec = { workspace = true }
sp-api = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[features]
default = ['std']
runtime-benchmarks = []
std = [
  'parity-scale-codec/std',
  'frame-support/std',
  'frame-system/std',
  'sp-std/std',
  'sp-runtime/std',
  'sp-api/std',
  'scale-info/std',
  'sp-core/std',
]
