[package]
authors = ["Frequency"]
description = "A package that defines common primitives used in runtime and RPCs"
edition = "2021"
homepage = "https://frequency.xyz"
license = "Apache-2.0"
name = "common-primitives"
publish = false
repository = "https://github.com/frequency-chain/frequency/"
version = "1.17.0-rc5+polkadotstable2503"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
frame-support = { workspace = true }
frame-system = { workspace = true }
impl-serde = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["alloc"] }
enumflags2 = { workspace = true }
smallvec = { workspace = true }
sp-api = { workspace = true }
sp-io = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
numtoa = { workspace = true }
sp-externalities = { workspace = true }
sp-runtime-interface = { workspace = true }
libsecp256k1 = { workspace = true, features = ["hmac"] }
log = "0.4.22"
lazy_static = { workspace = true }

[features]
default = ['std']
runtime-benchmarks = []
serde = []
std = [
  'parity-scale-codec/std',
  'frame-support/std',
  'frame-system/std',
  'impl-serde/std',
  'scale-info/std',
  'serde_json/std',
  'sp-api/std',
  'sp-io/std',
  'sp-core/std',
  'sp-runtime/std',
  'sp-externalities/std',
  'sp-runtime-interface/std',
  'libsecp256k1/std',
]
test = []

[lints]
workspace = true
