[package]
authors = ["Frequency Team"]
description = "A package that defines common primitives used in runtime and RPCs"
edition = "2021"
homepage = "https://frequency.xyz"
license = "Apache-2.0"
name = 'signed_extensions'
publish = false
repository = "https://github.com/LibertyDSNP/frequency/"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = {package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"]}
scale-info = {version = "2.0.1", default-features = false, features = ["derive"]}
serde = { version = "1.0", default-features = false, features = ["derive"] }
hex-literal = {version = "0.3.4", optional = true}
log = {version = "0.4.17", default-features = false}


frame-support = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25"}
sp-runtime = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.25"}
sp-api = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.25"}
sp-std = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.25"}
pallet-balances = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.25"}
pallet-democracy = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.25" }
pallet-collective = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.25" }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'sp-std/std',
	'sp-runtime/std',
	'sp-api/std',
]
