[package]
authors = ["KILT <info@kilt.io>"]
edition = "2021"
homepage = "https://kilt.io/"
version = "0.0.0"
name = "ctype"
description = "Enables adding CTypes."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
kilt-support = {path = "../support", features = ["mock", "try-runtime"]}
pallet-balances = { git = "https://github.com/paritytech/substrate", features = ["std"], branch = "polkadot-v0.9.42" }
sp-core = { git = "https://github.com/paritytech/substrate", features = ["std"], branch = "polkadot-v0.9.42" }
sp-keystore = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", features = ["std"]}

[dependencies]
# External dependencies
parity-scale-codec = {version = "3.2.2", default-features = false, features = ["derive"] }

log = "0.4.17"

scale-info = {version = "2.5.0", default-features = false, features = [
  "derive",
]}

# Internal dependencies
kilt-support = {path = "../support", default-features = false }

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.42" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.42" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.42" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.42" }
sp-keystore = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", optional = true}
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42" }

[features]
default = ["std"]
mock = [
  "pallet-balances",
  "sp-core",
  "sp-io",
  "sp-keystore",
]
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-system/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "kilt-support/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
std = [
  "frame-benchmarking?/std",
  "frame-support/std",
  "frame-system/std",
  "kilt-support/std",
  "log/std",
  "pallet-balances/std",
  "parity-scale-codec/std",
  "scale-info/std",
  "sp-core/std",
  "sp-io/std",
  "sp-keystore/std",
  "sp-runtime/std",
  "sp-std/std",
]
try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
]
