[package]
description = "Pallet enabling receiving identity information from providers via the pallet-dip-provider pallet."
name = "pallet-dip-consumer"
authors = ["KILT <info@kilt.io>"]
edition = "2021"
homepage = "https://kilt.io/"
# version = "1.11.0-dev"
version = "0.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
cumulus-pallet-xcm = {git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.42"}
dip-support = {path = "../dip-support", default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42" }
kilt-support = {path = "../support", default-features = false}
parity-scale-codec = {version = "3.2.2", default-features = false, features = ["derive"] }
scale-info = {version = "2.5.0", default-features = false, features = [
  "derive",
]}
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42" }

[features]
default = ["std"]
std = [
  "cumulus-pallet-xcm/std",
  "dip-support/std",
  "frame-support/std",
  "frame-system/std",
  "kilt-support/std",
  "parity-scale-codec/std",
  "scale-info/std",
  "sp-std/std",
]
runtime-benchmarks = [
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
]
