[package]
description = "Pallet enabling to send some form of identity information to a specified destination."
name = "pallet-dip-provider"
authors = ["KILT <info@kilt.io>"]
edition = "2021"
homepage = "https://kilt.io/"
# version = "1.11.0-dev"
version = "0.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
did = {path = "../did", default-features = false }
dip-support = {path = "../dip-support", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42" }
parity-scale-codec = {version = "3.2.2", default-features = false, features = ["derive"] }
scale-info = {version = "2.5.0", default-features = false, features = [
  "derive",
]}
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42" }
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.42" }

[features]
default = ["std"]
std = [
  "did/std",
  "dip-support/std",
  "frame-support/std",
  "frame-system/std",
  "parity-scale-codec/std",
  "scale-info/std",
  "sp-std/std",
  "xcm/std",
]
runtime-benchmarks = [
  "did/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks"
]
