[package]
name = "pallet-web3-names"
description = "Unique Web3 nicknames for KILT DIDs."
authors = ["KILT <info@kilt.io>"]
edition = "2021"
homepage = "https://kilt.io/"
version = "0.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
kilt-support = {path = "../support", default-features = false, features = ["mock", "try-runtime"]}

pallet-balances = { git = "https://github.com/paritytech/substrate", features = ["std"], branch = "polkadot-v0.9.42" }

sp-core = { git = "https://github.com/paritytech/substrate", features = ["std"], branch = "polkadot-v0.9.42" }
sp-io = { git = "https://github.com/paritytech/substrate", features = ["std"], branch = "polkadot-v0.9.42" }
sp-keystore = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42", features = ["std"]}

[dependencies]
# External dependencies
parity-scale-codec = {version = "3.2.2", default-features = false, features = ["derive"] }
scale-info = {version = "2.5.0", default-features = false, features = [
  "derive",
]}

# Internal dependencies
kilt-support = {path = "../support", default-features = false, features = ["mock", "try-runtime"]}

# Substrate dependencies
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42" }

# Benchmarking dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.42" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.42" }

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking",
  "kilt-support/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "sp-io",
  "sp-runtime/runtime-benchmarks",
]
std = [
  "frame-benchmarking?/std",
  "frame-support/std",
  "frame-system/std",
  "parity-scale-codec/std",
  "scale-info/std",
  "sp-runtime/std",
  "sp-std/std",
]
try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
]
