[package]
authors = ["Frequency"]
description = "Substrate CLI options for Frequency node"
edition = "2021"
homepage = "https://frequency.xyz/"
license = "Apache-2.0"
name = "cli-opt"
repository = "https://github.com/frequency-chain/frequency/"
version = "1.17.5-rc8+polkadotstable2506-2"

[dependencies]
clap = { workspace = true, features = ["derive"] }

[lints]
workspace = true
