[package]
authors = ["Frequency"]
description = "Substrate cli for frequency node"
edition = "2021"
homepage = "https://frequency.xyz/"
license = "Apache-2.0"
name = "frequency-cli"
repository = "https://github.com/LibertyDSNP/frequency/"
version = "1.9.0-rc2+polkadot1.1.0"

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.6.1" }
derive_more = "0.99.17"
futures = { version = "0.3.28", features = ["thread-pool"] }
hex-literal = "0.4.1"
log = "0.4.17"
serde_json = "1.0.107"
serde = { version = "1.0", features = ["derive"] }
# Frequency Runtime
common-primitives = { default-features = false, path = "../../common/primitives" }
common-runtime = { package = "common-runtime", path = "../../runtime/common", default-features = false }
frequency-runtime = { package = "frequency-runtime", path = "../../runtime/frequency", default-features = false }
frequency-service = { package = "frequency-service", path = "../service", default-features = false, optional = true }
pallet-msa = { package = "pallet-msa", path = "../../pallets/msa", default-features = false }
pallet-frequency-tx-payment = { package = "pallet-frequency-tx-payment", path = "../../pallets/frequency-tx-payment", default-features = false }
pallet-handles = { package = "pallet-handles", path = "../../pallets/handles", default-features = false }
cli-opt = { default-features = false, path = "../cli-opt" }

# Substrate
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk", optional = true, branch = "release-polkadot-v1.1.0" }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0" }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0" }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0" }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk", optional = true, branch = "release-polkadot-v1.1.0" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk", optional = true, branch = "release-polkadot-v1.1.0" }
sc-sysinfo = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sc-tracing = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0" }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", optional = true, branch = "release-polkadot-v1.1.0" }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
try-runtime-cli = { git = "https://github.com/paritytech/polkadot-sdk", optional = true, branch = "release-polkadot-v1.1.0" }
# Polkadot
polkadot-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
polkadot-parachain-primitives = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
polkadot-service = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
# Cumulus
cumulus-client-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
cumulus-client-service = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
cumulus-primitives-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }

[features]
std = ["sp-api/std", "sp-io/std"]
cli = [
  "frequency-service",
  "sp-core",
  "sc-cli",
  "sc-service",
  "frame-benchmarking-cli",
  "try-runtime-cli"
]
default = ["std", "cli"]
runtime-benchmarks = [
  "polkadot-cli/runtime-benchmarks",
  "frequency-runtime/runtime-benchmarks",
  "frame-benchmarking-cli/runtime-benchmarks"
]
try-runtime = ["frequency-service/try-runtime", "try-runtime-cli", "try-runtime-cli/try-runtime"]
on-chain-release-build = ["sp-api/disable-logging"]
frequency = ["frequency-service/frequency"]
frequency-no-relay = ["frequency-service/frequency-no-relay"]
frequency-rococo-local = ["frequency-service/frequency-rococo-local"]
frequency-rococo-testnet = ["frequency-service/frequency-rococo-testnet"]
frequency-lint-check = [
  "frequency",
  "frequency-no-relay",
  "frequency-rococo-local",
  "frequency-rococo-testnet",
  "frequency-service/frequency-lint-check"
]

