[package]
authors = ["Frequency"]
description = "Substrate cli for frequency node"
edition = "2021"
homepage = "https://frequency.xyz/"
license = "Apache-2.0"
name = "frequency-cli"
repository = "https://github.com/frequency-chain/frequency/"
version = "1.13.0-rc1+polkadot1.1.0"

[dependencies]
clap = { workspace = true, features = ["derive"] }
derive_more = { workspace = true }
futures = { workspace = true, features = ["thread-pool"] }
hex-literal = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
# Frequency Runtime
common-primitives = { default-features = false, path = "../../common/primitives" }
common-runtime = { package = "common-runtime", path = "../../runtime/common", default-features = false }
frequency-runtime = { package = "frequency-runtime", path = "../../runtime/frequency", default-features = false }
frequency-service = { package = "frequency-service", path = "../service", default-features = false, optional = true }
pallet-msa = { package = "pallet-msa", path = "../../pallets/msa", default-features = false }
pallet-frequency-tx-payment = { package = "pallet-frequency-tx-payment", path = "../../pallets/frequency-tx-payment", default-features = false }
pallet-handles = { package = "pallet-handles", path = "../../pallets/handles", default-features = false }
cli-opt = { default-features = false, path = "../cli-opt" }

# Substrate
frame-benchmarking-cli = { workspace = true, optional = true }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true }
pallet-transaction-payment = { workspace = true }
sc-cli = { workspace = true, optional = true }
sc-client-api = { workspace = true }
sc-service = { workspace = true, optional = true }
sc-sysinfo = { workspace = true }
sc-telemetry = { workspace = true }
sc-tracing = { workspace = true }
sc-executor = { workspace = true }
sp-io = { workspace = true }
sp-api = { workspace = true }
sp-core = { workspace = true, optional = true }
sp-inherents = { workspace = true }
sp-keyring = { workspace = true }
sp-runtime = { workspace = true }
sp-timestamp = { workspace = true }
try-runtime-cli = { workspace = true, optional = true }
# Polkadot
polkadot-cli = { workspace = true }
polkadot-parachain-primitives = { workspace = true }
polkadot-primitives = { workspace = true }
polkadot-service = { workspace = true }
# Cumulus
cumulus-client-cli = { workspace = true }
cumulus-client-service = { workspace = true }
cumulus-primitives-parachain-inherent = { workspace = true }
cumulus-primitives-core = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[features]
std = ["sp-io/std", "sp-api/std", "frame-support/std"]
cli = [
  "frequency-service",
  "sp-core",
  "sc-cli",
  "sc-service",
  "frame-benchmarking-cli",
  "frame-benchmarking",
  "try-runtime-cli",
]
default = ["std", "cli"]
runtime-benchmarks = [
  "polkadot-cli/runtime-benchmarks",
  "frequency-runtime/runtime-benchmarks",
  "frame-benchmarking-cli/runtime-benchmarks",
]
try-runtime = [
  "frequency-service/try-runtime",
  "try-runtime-cli",
  "try-runtime-cli/try-runtime",
]
on-chain-release-build = ["sp-api/disable-logging"]
frequency = ["frequency-service/frequency"]
frequency-no-relay = ["frequency-service/frequency-no-relay"]
frequency-local = ["frequency-service/frequency-local"]
frequency-testnet = ["frequency-service/frequency-testnet"]
frequency-lint-check = [
  "frequency",
  "frequency-no-relay",
  "frequency-local",
  "frequency-testnet",
  "frequency-service/frequency-lint-check",
]
